--- a/package.json
+++ b/package.json
@@ -10,20 +10,22 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "bootstrap-3-card": "^0.2.0",
     "flexbox-react": "^4.4.0",
+    "framer-motion": "^6.3.2",
     "mdb-react-ui-kit": "^2.4.0",
     "mdbreact": "^5.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
-    "react-native": "^0.67.4",
-    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-tiny-fab": "^4.0.4",
     "reactstrap": "^9.0.1",
+    "sass": "^1.50.1",
+    "save": "^2.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
